<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/shape_bg_setting_white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:id="@+id/tv_login_methods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:text="@string/login_method"
                android:textSize="@dimen/sp_15" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:fontFamily="@font/aktiv_medium"
                android:text="@string/login_method"
                android:textColor="@color/title"
                android:textSize="@dimen/sp_16" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rll_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:layout_marginStart="@dimen/dp_20"

        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/shape_bg_setting_white"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logout"
            android:textColor="@color/red"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="159.0dip"
            android:layout_height="21.0dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@drawable/tab_library" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16.0dip"

            android:text="@string/version_with_num"
            android:textColor="#ff9c9eb9"
            android:textSize="13.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2.0dip"
            android:layout_marginBottom="@dimen/dp_20"
            android:text="@string/setting_copy"
            android:textColor="#ff9c9eb9"
            android:textSize="13.0sp" />
    </LinearLayout>
</LinearLayout>