<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/shape_bg_setting_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"

                android:layout_marginLeft="@dimen/dp_20"
                android:src="@drawable/vector_setting_contact" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_20"
                android:text="@string/contact_us"
                android:textColor="@color/title"
                android:textSize="@dimen/sp_17" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_policy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_8"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/iv_policy_arrow"
                android:layout_width="@dimen/dp_8"
                android:layout_height="@dimen/dp_14"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:src="@drawable/vector_arrow_right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_toStartOf="@+id/iv_policy_arrow"
                android:layout_toLeftOf="@+id/iv_policy_arrow"
                android:fontFamily="@font/aktiv_medium"
                android:text="@string/setting_privacy"
                android:textColor="@color/title"
                android:textSize="@dimen/sp_16" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_rate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/iv_rate_arrow"
                android:layout_width="@dimen/dp_8"
                android:layout_height="@dimen/dp_14"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:src="@drawable/vector_arrow_right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_toStartOf="@+id/iv_rate_arrow"
                android:layout_toLeftOf="@+id/iv_rate_arrow"
                android:fontFamily="@font/aktiv_medium"
                android:text="@string/rate_us"
                android:textColor="@color/title"
                android:textSize="@dimen/sp_16" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_feedback"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/iv_feedback_arrow"
                android:layout_width="@dimen/dp_8"
                android:layout_height="@dimen/dp_14"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_20"
                android:src="@drawable/vector_arrow_right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_toLeftOf="@+id/iv_feedback_arrow"
                android:fontFamily="@font/aktiv_medium"
                android:text="@string/feedback"
                android:textColor="@color/title"
                android:textSize="@dimen/sp_16" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>