<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/shape_bg_setting_white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_toStartOf="@+id/tv_price"
                android:layout_toLeftOf="@+id/tv_price"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_26"
                    android:gravity="center_vertical"
                    android:text="@string/remove_ad"
                    android:textColor="@color/title"
                    android:textSize="@dimen/sp_18" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/dp_26"
                    android:text="@string/tip_iab"
                    android:textColor="@color/title_rest"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_price"

                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_32"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@drawable/shape_bg_ad_purple"
                android:gravity="center"
                android:minWidth="@dimen/dp_75"
                android:paddingStart="@dimen/dp_11"
                android:paddingLeft="@dimen/dp_11"
                android:paddingEnd="@dimen/dp_12"
                android:paddingRight="@dimen/dp_12"
                android:text="69.000 đ"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_reason"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/shape_bg_setting_ad_btn_blue">

            <TextView
                android:id="@+id/tv_resean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/why_see_ads"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless" />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>