<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_20"
    android:layout_marginTop="@dimen/dp_5"
    android:layout_marginEnd="@dimen/dp_20"
    android:layout_marginBottom="@dimen/dp_10"
    android:background="@drawable/shape_bg_setting_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"

            android:layout_marginLeft="@dimen/dp_20"
            android:src="@drawable/vector_setting_general" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_20"
            android:text="@string/setting_general"
            android:textColor="@color/title"
            android:textSize="@dimen/sp_17" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_8"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/iv_gender_arrow1"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/selector_switch_setting" />

        <TextView
            tools:ignore="UnknownId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:fontFamily="@font/aktiv_medium"
            android:text="@string/setting_profile"
            android:textColor="@color/title"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_plan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/iv_gender_arrow"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/selector_switch_setting" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:fontFamily="@font/aktiv_medium"
            android:text="@string/setting_plan"
            android:textColor="@color/title"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/iv_language_arrow"
            android:layout_width="@dimen/dp_8"
            android:layout_height="@dimen/dp_14"

            android:layout_alignParentRight="true"

            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_20"
            android:src="@drawable/vector_arrow_right"
            android:visibility="gone" />

        <TextView
            app:autoSizeTextType="uniform"
            android:layout_width="77dp"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"

            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_toLeftOf="@+id/iv_language_arrow"
            android:autoSizeMaxTextSize="25sp"
            android:autoSizeMinTextSize="22sp"
            android:background="@drawable/shape_language_setting"
            android:fontFamily="@font/aktiv_medium"
            android:gravity="center"
            android:maxLines="1"
            android:padding="6dp"
            android:paddingLeft="12dp"
            android:text="English"
            android:textColor="@color/title"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_toLeftOf="@+id/iv_language_arrow"
            android:fontFamily="@font/aktiv_medium"
            android:text="@string/change_language_title"
            android:textColor="@color/title"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>

</LinearLayout>
</LinearLayout>