<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/shape_bg_setting_white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20">

        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_52"
            android:layout_marginTop="@dimen/dp_11">

            <ImageView
                android:id="@+id/iv_title_switch"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"

                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/selector_switch_setting" />

            <ImageView
                android:id="@+id/iv_title_img"
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"
                android:layout_centerVertical="true"
                android:src="@drawable/vector_setting_reminder" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:layout_toStartOf="@+id/iv_title_switch"
                android:layout_toEndOf="@+id/iv_title_img"
                android:text="@string/set_reminders"
                android:textColor="@color/title"
                android:textSize="@dimen/sp_17" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_tip"
                android:layout_width="@dimen/dp_11"
                android:layout_height="@dimen/dp_17"
                android:layout_marginStart="@dimen/dp_15"
                android:src="@drawable/vector_setting_reminder_arrow" />

            <TextView
                android:id="@+id/tv_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6_minus"
                android:background="@drawable/shape_bg_reminder_tip"
                android:fontFamily="@font/aktiv_medium"
                android:paddingStart="@dimen/dp_16"
                android:paddingTop="@dimen/dp_10"
                android:paddingEnd="@dimen/dp_8"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/reminder_tips"
                android:textColor="@color/title_rest"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_reminder"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/rl_reminder"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_24"
            android:background="@drawable/shape_bg_add_reminder_blue"
            android:gravity="center"
            android:paddingStart="@dimen/dp_36"
            android:paddingEnd="@dimen/dp_36">

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="@dimen/dp_14"
                android:layout_height="@dimen/dp_14"
                android:src="@drawable/vector_add_blue" />

            <TextView
                android:id="@+id/tv_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_6"
                android:text="@string/add_reminder"
                android:textColor="@color/theme_color_blue"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>